Remove JVM option for PermGenSize which is an unrecognized option in JDK 9.